apigateway/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microser-gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # from below the http://localhost/gateway/inventory will be rewrite to http://localhost/inventory
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /gateway/(.*) # the gateway URL will be like http://localhost/gateway/inventory
            pathType: ImplementationSpecific
            backend:
              service:
                name: microser-gateway-svc
                port:
                  number: 8083
